[gd_scene load_steps=49 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Art/Player.png" type="Texture" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://TileMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://EnemySpawnArea.gd" type="Script" id=5]
[ext_resource path="res://data-latin.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://GameOver.tscn" type="PackedScene" id=7]
[ext_resource path="res://HospitalPurchasing.tscn" type="PackedScene" id=8]
[ext_resource path="res://Key.gd" type="Script" id=9]
[ext_resource path="res://Art/RedKey.png" type="Texture" id=10]
[ext_resource path="res://Art/BaseKey.png" type="Texture" id=11]
[ext_resource path="res://Art/BlueKey.png" type="Texture" id=12]
[ext_resource path="res://Art/GreenKey.png" type="Texture" id=13]
[ext_resource path="res://Hospital.tscn" type="PackedScene" id=14]
[ext_resource path="res://HospitalScene.tscn" type="PackedScene" id=15]
[ext_resource path="res://Godot Wild Jam Game OST .mp3" type="AudioStream" id=16]
[ext_resource path="res://KeyPickupSFX.wav" type="AudioStream" id=17]
[ext_resource path="res://Enemy.gd" type="Script" id=18]
[ext_resource path="res://GreenVirus.png" type="Texture" id=19]
[ext_resource path="res://Treatment.tscn" type="PackedScene" id=20]
[ext_resource path="res://EdgeOfTheGalaxyRegular-OVEa6.otf" type="DynamicFontData" id=21]
[ext_resource path="res://Cupboard.gd" type="Script" id=22]
[ext_resource path="res://Art/Cupboard.png" type="Texture" id=23]
[ext_resource path="res://CabinetScreen.tscn" type="PackedScene" id=24]
[ext_resource path="res://HospitalLeave.gd" type="Script" id=25]
[ext_resource path="res://Normal Hearts.tscn" type="PackedScene" id=26]
[ext_resource path="res://Art/Square.png" type="Texture" id=27]
[ext_resource path="res://House.tscn" type="PackedScene" id=28]
[ext_resource path="res://HouseScene.tscn" type="PackedScene" id=29]
[ext_resource path="res://HouseScene2.tscn" type="PackedScene" id=30]
[ext_resource path="res://VictoryScreen.tscn" type="PackedScene" id=31]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 107.763, 45.5746 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 110
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 37
font_data = ExtResource( 6 )

[sub_resource type="CanvasItemMaterial" id=6]

[sub_resource type="DynamicFont" id=7]
size = 26
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 21 )

[sub_resource type="CircleShape2D" id=8]
radius = 65.0

[sub_resource type="CircleShape2D" id=9]
radius = 88.3826

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 157.5, 1.45558 )

[sub_resource type="DynamicFont" id=11]
size = 15
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 48.474, 139.213 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 48, 140 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 29.0167, 59.168 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 42.0015, 1929.74 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 6.722, 10 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 46.748, 47.811 )

[node name="world" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="InfectedScreen" type="Sprite" parent="CanvasLayer2"]
visible = false
modulate = Color( 0.803922, 0.105882, 0.105882, 0.27451 )
position = Vector2( 530.33, 311.127 )
scale = Vector2( 11.6066, 7.22254 )
texture = ExtResource( 27 )

[node name="TileMap" parent="." instance=ExtResource( 4 )]
position = Vector2( 835.766, 767.781 )

[node name="EnemySpawner" type="Area2D" parent="."]
position = Vector2( 1910.52, 1029.26 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemySpawner"]
position = Vector2( 2.47196, -21.6853 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOver" parent="CanvasLayer" instance=ExtResource( 7 )]
visible = false
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/Control"]
margin_left = 43.4126
margin_top = 26.2831
margin_right = 531.413
margin_bottom = 151.283
rect_pivot_offset = Vector2( 54.1793, 22.2038 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/MarginContainer/Control"]
self_modulate = Color( 0.972549, 0.972549, 0.972549, 1 )
margin_left = 503.693
margin_top = 28.9728
margin_right = 991.693
margin_bottom = 153.973
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/MarginContainer/Control"]
position = Vector2( 898.251, 88.9 )
scale = Vector2( 0.162368, 0.143545 )
texture = ExtResource( 11 )

[node name="Label3" type="Label" parent="CanvasLayer/MarginContainer/Control"]
margin_left = 18.6908
margin_top = 7.0
margin_right = 288.691
margin_bottom = 47.0
rect_pivot_offset = Vector2( 54.1793, 22.2038 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 4 )
text = "Civilians killed:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeyMessage" type="Label" parent="CanvasLayer/MarginContainer/Control"]
visible = false
modulate = Color( 0.733333, 0.207843, 0.207843, 1 )
margin_left = 278.183
margin_top = 265.045
margin_right = 638.183
margin_bottom = 350.045
custom_fonts/font = SubResource( 5 )
text = "You need - more keys"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hospital Purchasing" parent="CanvasLayer/MarginContainer" instance=ExtResource( 8 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="Back2" type="Button" parent="CanvasLayer/MarginContainer/Hospital Purchasing"]
modulate = Color( 1, 0, 0, 1 )
material = SubResource( 6 )
margin_left = 153.878
margin_top = 84.6326
margin_right = 204.878
margin_bottom = 131.633
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/Hospital Purchasing/Back2"]
margin_left = 2.12247
margin_top = 5.86739
margin_right = 51.1225
margin_bottom = 49.8674
rect_pivot_offset = Vector2( -1517.31, -146.948 )
custom_fonts/font = SubResource( 7 )
text = "X"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Treatment" parent="CanvasLayer/MarginContainer" instance=ExtResource( 20 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="Button" type="Button" parent="CanvasLayer/MarginContainer/Treatment"]
modulate = Color( 1, 0, 0, 1 )
material = SubResource( 6 )
margin_left = 153.878
margin_top = 84.6326
margin_right = 204.878
margin_bottom = 131.633
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/Treatment/Button"]
margin_left = 2.12247
margin_top = 5.86739
margin_right = 51.1225
margin_bottom = 49.8674
rect_pivot_offset = Vector2( -1517.31, -146.948 )
custom_fonts/font = SubResource( 7 )
text = "X"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CabinetScreen" parent="CanvasLayer/MarginContainer" instance=ExtResource( 24 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="VictoryScreen" parent="CanvasLayer/MarginContainer" instance=ExtResource( 31 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_right = 40.0
margin_bottom = 40.0

[node name="Normal Hearts" parent="CanvasLayer" instance=ExtResource( 26 )]
margin_top = -1.0
margin_bottom = -1.0
mouse_filter = 2

[node name="Heart1" parent="CanvasLayer/Normal Hearts" index="0"]
position = Vector2( 447.746, 75.6834 )
scale = Vector2( 0.264847, 0.264847 )

[node name="Heart2" parent="CanvasLayer/Normal Hearts" index="1"]
position = Vector2( 582.685, 102.164 )
scale = Vector2( 0.269419, 0.269419 )

[node name="Heart3" parent="CanvasLayer/Normal Hearts" index="2"]
position = Vector2( 706.281, 107.259 )
scale = Vector2( 0.281431, 0.281431 )

[node name="Hospital" parent="." instance=ExtResource( 14 )]
position = Vector2( 2152.57, -126.207 )

[node name="CollisionPolygon2D" parent="Hospital" index="1"]
position = Vector2( 20.2854, 13.9325 )
polygon = PoolVector2Array( 37.1077, -48.8838, 62.7767, -49.8292, 64.6781, 33.3659, 134.08, 33.8386, 134.449, 142.371, 134.449, 149.667, 245.573, 150.79, 246.134, 142.932, 248.379, 138.443, 249.177, 1.60315, 249.887, -119.942, 162.035, -121.073, 57.3826, -122.42, -11.969, -121.685, -90.1104, -122.768, -226.984, -123.091, -226.984, 13.2997, -226.984, 146.3, -226.423, 149.106, -114.738, 149.667, -113.615, 33.4923, -52.7344, 31.9478, -34.5586, -50.6079 )

[node name="CollisionShape2D" parent="Hospital/Area2D" index="0"]
position = Vector2( 34.4321, 65.0633 )

[node name="Timer" parent="Hospital" index="3"]
wait_time = 30.0
autostart = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -15.0
autoplay = true

[node name="KeyPickupSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -10.097

[node name="Enemy" type="KinematicBody2D" parent="."]
position = Vector2( -4668.58, -2121.85 )
scale = Vector2( 0.689586, -0.518421 )
collision_layer = 4
collision_mask = 4
script = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="Enemy"]
position = Vector2( 74.3691, -30.9426 )
scale = Vector2( 0.104013, 0.11933 )
texture = ExtResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
position = Vector2( 72.318, -41.3283 )
shape = SubResource( 8 )

[node name="Area2D" type="Area2D" parent="Enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/Area2D"]
position = Vector2( 76.6024, -32.973 )
shape = SubResource( 9 )

[node name="Timer" type="Timer" parent="Enemy"]

[node name="AfterHospitalLeave" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AfterHospitalLeave"]
position = Vector2( 2187.54, -36.2429 )
shape = SubResource( 10 )

[node name="HospitalLeave" type="Area2D" parent="."]
script = ExtResource( 25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HospitalLeave"]
position = Vector2( 2187.58, -83.8491 )
shape = SubResource( 10 )

[node name="PlayerInfectTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Hospital World" parent="." instance=ExtResource( 15 )]
light_mask = 4
position = Vector2( -5357.24, -2413.03 )

[node name="Button" type="Button" parent="Hospital World"]
process_priority = 7
modulate = Color( 0.898039, 0.980392, 1, 1 )
light_mask = 8
margin_left = 527.649
margin_top = 88.4109
margin_right = 592.649
margin_bottom = 126.411
button_mask = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Hospital World/Button"]
margin_right = 50.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 11 )
text = "Access 
Hospital"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cupboard" type="StaticBody2D" parent="."]
position = Vector2( -5312.44, -2073.37 )
script = ExtResource( 22 )

[node name="Sprite" type="Sprite" parent="Cupboard"]
position = Vector2( -49.1369, -26.4583 )
scale = Vector2( 0.622024, 0.622024 )
texture = ExtResource( 23 )

[node name="Area2D" type="Area2D" parent="Cupboard"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cupboard/Area2D"]
position = Vector2( -201.343, -9.79987 )
shape = SubResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cupboard"]
position = Vector2( -201.343, -8.909 )
shape = SubResource( 13 )

[node name="Timer" type="Timer" parent="Cupboard"]
wait_time = 0.8
autostart = true

[node name="House1" parent="." instance=ExtResource( 28 )]
position = Vector2( 1431.03, 2186.19 )
rotation = 1.55325

[node name="Sprite" parent="House1" index="0"]
position = Vector2( 0.083252, 0.00146484 )

[node name="House1World" parent="." instance=ExtResource( 29 )]
position = Vector2( -5400, -328 )

[node name="Sprite3" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1382.92, 2331.73 )
scale = Vector2( 0.000182758, 0.00441855 )
texture = ExtResource( 27 )
offset = Vector2( 51446.6, 1221.82 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1071.69, 279.237 )
scale = Vector2( 0.0135188, 0.0664722 )
texture = ExtResource( 27 )
offset = Vector2( 51446.6, 1221.82 )

[node name="House" parent="." instance=ExtResource( 28 )]
position = Vector2( 1713.87, 499.959 )
rotation = -1.57246

[node name="House2World" parent="." instance=ExtResource( 30 )]
position = Vector2( -5390.48, 2014.95 )

[node name="Key1" type="StaticBody2D" parent="."]
position = Vector2( 870.58, 1260.64 )
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="Key1"]
position = Vector2( 296.849, 147.795 )
scale = Vector2( 0.17558, 0.149206 )
texture = ExtResource( 10 )

[node name="Area2D" type="Area2D" parent="Key1"]
position = Vector2( -54.1316, 1.97473 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Key1/Area2D"]
position = Vector2( 351.407, 145.441 )
shape = SubResource( 16 )

[node name="Key2" type="StaticBody2D" parent="."]
position = Vector2( 1700.18, 30.5286 )
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="Key2"]
position = Vector2( -6989.86, -120.265 )
scale = Vector2( 0.17558, 0.149206 )
texture = ExtResource( 12 )

[node name="Area2D" type="Area2D" parent="Key2"]
position = Vector2( -54.1316, 1.97473 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Key2/Area2D"]
position = Vector2( -6935.3, -122.619 )
shape = SubResource( 16 )

[node name="Key3" type="StaticBody2D" parent="."]
position = Vector2( 2569.89, 568.864 )
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="Key3"]
position = Vector2( -6896.76, 1776.94 )
scale = Vector2( 0.17558, 0.149206 )
texture = ExtResource( 13 )

[node name="Area2D" type="Area2D" parent="Key3"]
position = Vector2( -54.1316, 1.97473 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Key3/Area2D"]
position = Vector2( -6842.2, 1774.59 )
shape = SubResource( 16 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2033.67, -384.419 )
rotation = -1.57968
scale = Vector2( 1, 1 )
shape = SubResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 948.535, 794.353 )
shape = SubResource( 17 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2677.42, 915.988 )
scale = Vector2( 0.990096, 1.05463 )
shape = SubResource( 17 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1485.59, 2511.78 )
rotation = 1.59785
scale = Vector2( 1, 1 )
shape = SubResource( 17 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 1531.53, 1144.3 )
script = ExtResource( 1 )

[node name="PlayerCollider" type="CollisionShape2D" parent="Player"]
shape = SubResource( 14 )

[node name="Sprite" type="Sprite" parent="Player"]
position = Vector2( 25.3076, -0.406738 )
scale = Vector2( 0.0875801, 0.0875801 )
texture = ExtResource( 2 )

[node name="PlayerArena" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/PlayerArena"]
position = Vector2( 0.749207, 0 )
shape = SubResource( 15 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="Node" type="Node" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Enemy/Area2D" to="Enemy" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Enemy/Timer" to="Enemy" method="_on_Timer_timeout"]
[connection signal="body_entered" from="AfterHospitalLeave" to="Hospital" method="_on_AfterHospitalLeave_body_entered"]
[connection signal="body_entered" from="AfterHospitalLeave" to="HospitalLeave" method="_on_AfterHospitalLeave_body_entered"]
[connection signal="body_entered" from="HospitalLeave" to="." method="_on_HospitalLeave_body_entered"]
[connection signal="body_entered" from="HospitalLeave" to="HospitalLeave" method="_on_HospitalLeave_body_entered"]
[connection signal="timeout" from="PlayerInfectTimer" to="." method="_on_PlayerInfectTimer_timeout"]
[connection signal="body_entered" from="Cupboard/Area2D" to="Cupboard" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Cupboard/Timer" to="Cupboard" method="_on_Timer_timeout"]
[connection signal="body_entered" from="House1/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="House1/Area2D" to="." method="_on_House1_body_entered"]
[connection signal="body_entered" from="House1World/Area2D" to="." method="_on_House1Leave_body_entered"]
[connection signal="body_entered" from="House/Area2D" to="." method="_on_House2_body_entered"]
[connection signal="body_entered" from="House2World/Area2D" to="." method="_on_House2Leave_body_entered"]
[connection signal="body_entered" from="Key1/Area2D" to="Key1" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Key2/Area2D" to="Key2" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Key3/Area2D" to="Key3" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Player/PlayerArena" to="Player" method="_on_Area2D_body_entered"]

[editable path="CanvasLayer/GameOver"]
[editable path="CanvasLayer/MarginContainer/Treatment"]
[editable path="CanvasLayer/MarginContainer/CabinetScreen"]
[editable path="CanvasLayer/Normal Hearts"]
[editable path="Hospital"]
[editable path="Hospital World"]
[editable path="House1"]
[editable path="House1World"]
[editable path="House"]
[editable path="House2World"]
